--- a/Agafonova Karina NLP.ipynb
+++ b/Agafonova Karina NLP.ipynb
@@ -550,30 +550,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 124,
    "id": "db0b1797",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.50025818]])"
+       "array([[0.50000002]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Feel free to check the sentiment of your own tweet below\n",
-    "my_tweet = 'I am learning how to use Jypiter notebook'\n",
+    "my_tweet = 'I Can Has Cheezburger?'\n",
     "predict_tweet(my_tweet, freqs, theta)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 125,
    "id": "67e80df5",
    "metadata": {},
    "outputs": [],
